Finalisation du site

--- a/assets/sass/composite/buttons/_buttons.scss
+++ b/assets/sass/composite/buttons/_buttons.scss
@@ -29,5 +29,6 @@
         background-color: transparent;
         border-color: $main-color;
         color: $main-color;
+        box-shadow: none;
     }
 }
