--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -9,4 +9,5 @@
 @import "composite/mentors/mentors.scss";
 @import "composite/service/service.scss";
 @import "composite/news/news.scss";
+@import "composite/contact/contact.scss";
 @import "composite/footer/footer.scss";
