--- a/assets/sass/composite/banner/_banner.scss
+++ b/assets/sass/composite/banner/_banner.scss
@@ -9,6 +9,23 @@
     background-size: cover;
     text-align: center;
     border-top: 6px solid rgb(255, 100, 200);
+
+    &.single-banner {
+        height: 200px;
+        background: linear-gradient(
+                to bottom,
+                rgba($main-color, 0.7) 20%,
+                rgba($white, 0.4)
+            ),
+            url("../imgs/banner/antenne.jpg") no-repeat center;
+        background-size: contain;
+
+        .b-title {
+            margin-top: -5rem;
+            margin-bottom: 0;
+        }
+    }
+
     .banner-wrapper {
         width: 70%;
         margin-top: -2.5rem;
@@ -16,9 +33,21 @@
         // font-family: "Ubuntu";
         margin-right: auto;
         padding-bottom: 1.5rem;
-        text-shadow: 1px 1px 5px rgba($main-color, 0.75);
+        text-shadow: 1px 1px 5px rgba($main-color, 0.25);
         @media (max-width: $md) {
             width: 90%;
+        }
+
+        .page-link {
+            a {
+                padding: 0.5em 0;
+                margin-left: 1rem;
+                color: $break-white;
+                transition: 0.25s ease;
+                &:hover {
+                    color: $main-color;
+                }
+            }
         }
 
         p {
