--- a/assets/sass/composite/news/_news_left_sidebar.scss
+++ b/assets/sass/composite/news/_news_left_sidebar.scss
@@ -7,6 +7,7 @@
         flex: 0 0 100%;
         margin-bottom: 2rem;
     }
+    // @import "_news-info.scss";
 
     @import "_blog_item.scss";
     @import "_blog_pagination.scss";
