--- a/assets/sass/composite/predefined/_form.scss
+++ b/assets/sass/composite/predefined/_form.scss
@@ -1,3 +1,13 @@
+.form-group {
+    margin-bottom: 1rem;
+}
+
+.form-inline {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+}
+
 .input-group {
     position: relative;
     width: 100%;
